<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_margin="30dp"

    tools:context=".presentation.auth.LoginFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/login_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/outfit_bold"
            android:text="@string/login_header"
            android:textAlignment="center"
            android:textColor="@color/ss_teal"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/login_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/outfit_semibold"
            android:text="@string/login_subtitle"
            android:textAlignment="center"
            android:textColor="@color/ss_subtitle"
            android:textSize="14sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/login_guest_hyperlink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/outfit_semibold"
        android:text="@string/login_guest_hyperlink"
        android:textAlignment="center"
        android:textColor="@color/ss_teal"
        android:textSize="14sp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="8dp">

        <TextView
            android:id="@+id/login_email_header"
            android:labelFor="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/outfit_regular"
            android:text="@string/login_email_header"
            android:textAlignment="textStart"
            android:textColor="@color/ss_input_header"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:ems="20"
            android:textColor="@color/ss_input_placeholder"
            android:inputType="textEmailAddress"
            android:text="@string/login_email_temp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="20dp">

        <TextView
            android:id="@+id/login_password_header"
            android:labelFor="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/outfit_regular"
            android:text="@string/login_password_header"
            android:textAlignment="textStart"
            android:textColor="@color/ss_input_header"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:ems="20"
            android:textColor="@color/ss_input_placeholder"
            android:inputType="textPassword"
            android:text="@string/login_password_temp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="8dp">

        <TextView
            android:id="@+id/login_forgot_hyperlink"
            android:labelFor="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/outfit_semibold"
            android:text="@string/login_forgot_hyperlink"
            android:textAlignment="textEnd"
            android:textColor="@color/ss_teal"
            android:textSize="14sp" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="20"
            android:text="@string/login_btn_login"
            android:textColor="@color/white"
            android:padding="12dp"
            app:cornerRadius="20dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/login_subtitle_alt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/outfit_semibold"
        android:text="@string/login_subtitle_alt"
        android:textAlignment="center"
        android:textColor="@color/ss_teal"
        android:textSize="14sp"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/login_btn_fb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="20"
            android:text="@string/login_btn_fb"
            android:textColor="@color/ss_teal"
            android:fontFamily="@font/outfit_semibold"
            android:textSize="12sp"
            android:padding="12dp"
            app:backgroundTint="@color/white"
            app:cornerRadius="20dp" />

        <Button
            android:id="@+id/login_btn_google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="20"
            android:text="@string/login_btn_google"
            android:textColor="@color/ss_teal"
            android:fontFamily="@font/outfit_semibold"
            android:textSize="12sp"
            android:padding="12dp"
            app:backgroundTint="@color/white"
            app:cornerRadius="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:layout_gravity="center"
        >

        <TextView
            android:id="@+id/login_subtitle_noaccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_subtitle_noaccount"
            android:textColor="@color/ss_subtitle"
            android:fontFamily="@font/outfit_semibold"
            android:textSize="14sp"
            android:layout_marginEnd="8dp"/>

        <TextView
            android:id="@+id/login_signup_hyperlink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/login_signup_hyperlink"
            android:textColor="@color/ss_teal"
            android:fontFamily="@font/outfit_semibold"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>